--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -100,7 +100,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: joindevops/frontend:v1
+        image: veera1517/frontend:v1
         resources:
           requests:
             cpu: "50m"
